# regs-tt

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  deno.json  index.html  regs-tt.wasm  tailwind.config.js
.github/workflows/: ci.yml  deploy-page.yml  pages.yml  rust-clippy.yml
assets/: button-d4f31b7d5d5c0254.css  button-d4f31b7d5d5c0254.css.br  header-8976bd6c9a55461b.css  header-8976bd6c9a55461b.css.br  home-c5fd28aa96101f99.css  home-c5fd28aa96101f99.css.br  icon-89df476969f724d2.css  icon-89df476969f724d2.css.br  icon-correct-8791099e282adb44.svg.br  icon-incorrect-d03b86c232579235.svg.br  icon-moon-light-33aa6c00581d7b00.svg.br  main-71f126d09731c67c.css  main-71f126d09731c67c.css.br  quiz-a2b0a89c4e395c3c.css  quiz-a2b0a89c4e395c3c.css.br  quiz_option-805ddcccee1cde46.css  quiz_option-805ddcccee1cde46.css.br  quiz_topic-eacd79e53e9bd1a7.css  quiz_topic-eacd79e53e9bd1a7.css.br  regs-tt-1875b6fc7d26fb4f.js  regs-tt-1875b6fc7d26fb4f.js.br  regs-tt-254ae93b3dd6d761.js  regs-tt-254ae93b3dd6d761.js.br  regs-tt-3c5325cce49a3f1a.js  regs-tt-3c5325cce49a3f1a.js.br  regs-tt-81f346b467db8434.js  regs-tt-81f346b467db8434.js.br  regs-tt-ed7030a1a695c510.js  regs-tt-ed7030a1a695c510.js.br  regs-tt_bg-354182fc758c3e9f.wasm  regs-tt_bg-354182fc758c3e9f.wasm.br  regs-tt_bg-54fd5c4fdeb962e6.wasm  regs-tt_bg-54fd5c4fdeb962e6.wasm.br  regs-tt_bg-6c5f902fd9ed222e.wasm  regs-tt_bg-6c5f902fd9ed222e.wasm.br  regs-tt_bg-81f6afc32c70608f.wasm  regs-tt_bg-81f6afc32c70608f.wasm.br  regs-tt_bg-95b4a5f7ded301b3.wasm  regs-tt_bg-95b4a5f7ded301b3.wasm.br  regs-tt_bg-c7659a4cb0f2a461.wasm  (+17 more)
assets/dioxus/: regs-tt.js  regs-tt.js.br  regs-tt_bg.wasm  regs-tt_bg.wasm.br
assets/styles/: main.css
assets/styles/tailwind/: tailwind.css
data/: goods-vehicle.json  public-service.json
desktop/: Cargo.toml  Dioxus.toml
desktop/assets/: main.css  start_menu.css
desktop/src/: main.rs
images/: icon-car.svg.br  icon-moon-dark.svg.br  icon-sun-dark.svg.br  icon-sun-light.svg.br  icon-taxi.svg.br  icon-truck.svg.br
lib/: Cargo.toml
lib/assets/data/: light-motor-vehicle.json
lib/assets/styling/: main.css
lib/assets/styling/views/: home.css  (+2 more)
lib/src/: lib.rs
lib/src/resources/: data.rs
lib/src/ui/: images.rs  mod.rs
mobile/: Cargo.toml
mobile/assets/: main.css
mobile/src/: main.rs
mobile/src/views/: mod.rs  start_menu.rs
src/: main.rs  routes.rs  types.rs
src/components/: button.rs  header.rs  icon.rs  mod.rs  quiz_topic.rs  start_menu.rs
src/routes/: home.rs  quiz.rs  results.rs
styles/: main.css.br
styles/tailwind/: tailwind.css  tailwind.css.br
wasm/: regs-tt.d.ts  regs-tt.d.ts.br  regs-tt.js  regs-tt.js.br  regs-tt_bg.wasm  regs-tt_bg.wasm.br  regs-tt_bg.wasm.d.ts  regs-tt_bg.wasm.d.ts.br
web/: Cargo.toml  build.rs
web/assets/: main.css  quiz_topic.css
web/src/: main.rs
(+24 files in other folders)
