[package]
name = "regs-tt"
version = "0.1.0"
authors = ["martial-plains <41553768+martial-plains@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
derive_more = { version = "1.0.0", features = ["is_variant"] }
dioxus = { version = "=0.6.0-alpha.2", features = ["router"] }
dioxus-logger = "0.5.1"
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "=0.6.0-alpha.2", features = ["desktop"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "=0.6.0-alpha.2", features = ["web"] }
