[workspace]
resolver = "2"
members = ["lib", "web", "desktop", "mobile"]

[workspace.package]
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2024"
description = "An app for studying the driving regulations in Trinidad and Tobago"

[workspace.dependencies]
convert_case = { version = "0.8.0" }
dioxus = { version = "0.6.3" }
getrandom = { version = "0.3.3" }
rand = { version = "0.9.2" }
regs_tt = { path = "lib" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.142" }
glib = "0.20.12"


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
