[package]
name = "desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]
convert_case = { workspace = true }
dioxus = { workspace = true, features = ["router", "desktop"] }
rand = { workspace = true }
regs_tt = { workspace = true }
serde_json = { workspace = true }


[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
