[package]
name = "web"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
convert_case = { workspace = true }
dioxus = { workspace = true, features = ["router"] }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
rand = { workspace = true }
regs_tt = { workspace = true }
serde_json = { workspace = true }


[features]
default = ["web"]
web = ["dioxus/web"]
